# vmprof-firefox-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
src/symbolserver/: __init__.py
src/symbolserver/test/: test_symbolserver.py
src/symbolserver/test/profiles/: example.jitlog  example.py
src/vmprofconvert/: __init__.py  __main__.py  geckoformat.py  processedformat.py  pypylog.py
src/vmprofconvert/test/: gecko_example.json  test_convert.py
src/vmprofconvert/test/profiles/: example.json  example.prof  example.py  example_with_lines.prof  multithread_example.prof  pypy-pystone.json  pystone.pypylog  vmprof_cpuburn.json  vmprof_cpuburn.prof
symbolserver/: __init__.py
symbolserver/test/: test_symbolserver.py
symbolserver/test/profiles/: bctest.py  bctest.py.bc
vmprofconvert/: __init__.py  __main__.py  geckoformat.py  pypylog.py
vmprofconvert/test/: example.json  gecko_example.json  processed_example.json  processed_example_with_mem.json  test_convert.py
vmprofconvert/test/profiles/: cpuburn.cpython.tsprof  example.json  example_with_lines.prof.json  gcbench_as_obj.prof  multithread_example.prof  multithread_example.prof.json  pypy-pystone.json  pypy-pystone.prof  pypy-pystone.prof.jit  pypy-pystone.prof.json  vmprof_cpuburn.json
